--- a/src/app/core/index/index.component.html
+++ b/src/app/core/index/index.component.html
@@ -181,8 +181,9 @@
       <button
         type="button"
         class="px-6 sm:px-8 py-2.5 sm:py-3 bg-teal-500 text-white font-light rounded-full hover:bg-teal-400 transform hover:translate-y-[-2px] transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-offset-2 focus:ring-offset-black text-base sm:text-lg tracking-wide"
+        [routerLink]="['/projects']"
       >
-        GO BEYOND
+        View Projects
       </button>
     </div>
 
