--- a/src/app/core/projects/projects.component.html
+++ b/src/app/core/projects/projects.component.html
@@ -97,12 +97,14 @@
           >Projects</a
         >
         <a
-          routerLink="/blog"
+          href="https://medium.com/@alex1kariuki"
+          target="_blank"
+          rel="noopener noreferrer"
           class="text-sm sm:text-base text-white hover:text-gray-300 transition-colors hover:scale-110 transform duration-200"
           >Blog</a
         >
         <a
-          routerLink="/contact"
+          href="mailto:alex@kariuki.dev"
           class="text-sm sm:text-base text-white hover:text-gray-300 transition-colors hover:scale-110 transform duration-200"
           >Contact</a
         >
