--- a/src/app/core/projects/projects.component.html
+++ b/src/app/core/projects/projects.component.html
@@ -104,7 +104,7 @@
           >Blog</a
         >
         <a
-          href="mailto:alex@kariuki.dev"
+          routerLink="/contact"
           class="text-sm sm:text-base text-white hover:text-gray-300 transition-colors hover:scale-110 transform duration-200"
           >Contact</a
         >
